--- a/style.css
+++ b/style.css
@@ -48,13 +48,18 @@ body {
   width: 100%;
 }
 
+button,
 input,
 textarea,
 select {
   width: 100%;
-  /* margin: 2px 0px 10px 0px; */
+  margin: 3px 0px 3px 0px;
   min-height: 30px;
   border-radius: 10px;
+}
+
+p {
+  /* margin: 3px 0px 3px 0px; */
 }
 
 textarea {
@@ -65,11 +70,13 @@ textarea {
 .input-checkbox {
   width: 20px;
   float: left;
+  margin-right: 10ppx;
 }
 
 label {
   width: 600px;
   float: left;
+  margin-left: 5px;
 }
 
 #title {
