--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 18px;
+  font-size: 30px;
   background-image: url('https://images.pexels.com/photos/683039/pexels-photo-683039.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
   background-repeat: repeat;
   background-attachment: fixed;
@@ -49,7 +49,6 @@ body {
 }
 
 button,
-input,
 textarea,
 select {
   width: 100%;
@@ -58,25 +57,21 @@ select {
   border-radius: 10px;
 }
 
-p {
-  /* margin: 3px 0px 3px 0px; */
-}
-
 textarea {
   width: 100%;
 }
 
-.input-radio,
-.input-checkbox {
-  width: 20px;
+label {
+  display: inline-block;
+  width: 100%;
   float: left;
-  margin-right: 10ppx;
 }
 
-label {
-  width: 600px;
+.input-radio,
+.input-checkbox {
+  width: auto;
   float: left;
-  margin-left: 5px;
+  clear: none;
 }
 
 #title {
